# multigrate

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  developer_docs.md  index.md  tutorials.md
docs/_templates/autosummary/: class.rst
docs/extensions/: typed_returns.py
docs/notebooks/: example.ipynb  integration.ipynb  neurips2021_cite_pp.ipynb  neurips2021_multiome_pp.ipynb  paired_integration_cite-seq.ipynb  paired_integration_cite.ipynb  paired_integration_multiome.ipynb  trimodal_integration.ipynb  trimodal_pp.ipynb
docs/notebooks/data/trimodal/: cellttype_harmonize.json  cite_harmonized_celltypes.csv  multiome_harmonized_celltypes.csv
docs/source/: conf.py  index.rst  installation.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: class_no_inherited.rst
docs/source/api/: index.rst
docs/source/tutorials/: index.rst  integration.ipynb
multigrate/: __init__.py
multigrate/data/: _preprocessing.py
multigrate/distributions/: _mmd.py
multigrate/metrics/: _ari.py  _clustering.py  _graph_connectivity.py  _isolated_labels.py  _metrics.py  _nmi.py  _silhouette.py
multigrate/model/: _multivae.py
multigrate/module/: __init__.py  _multivae_torch.py
multigrate/nn/: _base_components.py
multigrate/train/: __init__.py  _trainingplans.py
multigrate/utils/: __init__.py  _utils.py
src/multigrate/: __init__.py
src/multigrate/data/: _preprocessing.py
src/multigrate/dataloaders/: _ann_dataloader.py  _data_splitting.py
src/multigrate/distributions/: _jeffreys.py  _mmd.py
src/multigrate/model/: _multivae.py
src/multigrate/module/: _multivae_torch.py
src/multigrate/nn/: _base_components.py
src/multigrate/train/: _trainingplans.py
src/multigrate/utils/: __init__.py  _utils.py
src/multimil/: __init__.py
src/multimil/model/: __init__.py
src/multimil/nn/: _base_components.py
src/multimil/utils/: __init__.py  _utils.py
tests/: _helpers.py  conftest.py  test_basic.py
tests/data/: test_organize_multimodal_anndatas.py
tests/dataloaders/: test_group_data_loader.py
tests/distributions/: test_jeffreys.py  test_mmd.py
tests/model/: test_multivae.py  test_multivae_integrate_on_loss_coefs.py  test_multivae_integration_and_q2r_missing_mod_smoke.py  test_multivae_integration_and_q2r_smoke.py  test_multivae_load.py
tests/module/: test_multivae_torch.py
tests/nn/: test_decoder.py  test_generalized_sigmoid.py  test_mlp.py
