[tool.poetry]
name = "multigrate"
version = "1.0.0"
description = "multiomic data integration for single-cell genomics"
authors = ["Anastasia Litinetskaya <anastasia.litinetskaya@helmholtz-muenchen.de>", "Mohammad Lotfollahi <mohammad.lotfollahi@helmholtz-muenchen.de>"]
homepage = "https://github.com/theislab/multigrate/"
license = "BSD-3-Clause"
readme = "README.md"
packages = [
    { include = "multigrate" }
]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scanpy = "^1.9.0"
scvi-tools = "^0.14.6"
torchmetrics = "^0.6.0"

[tool.poetry.extras]
docs = [
    "jinja2<3.0.3",
    "scanpy",
    "sphinx",
    "scanpydoc",
    "nbsphinx",
    "nbsphinx-link",
    "ipython",
    "pydata-sphinx-theme",
    "typing_extensions",
    "sphinx-autodoc-typehints",
    "sphinx_gallery",
    "sphinx-rtd-theme",
]
tutorials = ["scanpy", "leidenalg", "python-igraph"]

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry>=1.0",
    "setuptools", # keep it here or "pip install -e" would fail
]